---
sidebar: sidebar 
permalink: release-notes/whats-new-9161.html 
keywords: 'what"s new, release notes, 9.16.1, asa r2, asa a1k, asa a90, asa a70' 
summary: Découvrez les nouvelles fonctionnalités disponibles dans ONTAP 9.16.1 pour les systèmes ASA r2. 
---
= Nouveautés de ONTAP 9.16.1 pour les systèmes ASA r2
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ../media/


[role="lead"]
Découvrez les nouvelles fonctionnalités disponibles dans ONTAP 9.16.1 pour les systèmes ASA r2.



== Protection des données

[cols="2,4"]
|===
| Mise à jour | Description 


| link:../data-protection/manage-consistency-groups.html["Prise en charge des groupes de cohérence hiérarchiques"] | Les groupes de cohérence hiérarchiques vous permettent de créer un groupe de cohérence parent contenant plusieurs groupes de cohérence enfant. Cela simplifie la protection et la gestion des données pour les structures de données complexes. 
|===


== Efficacité du stockage

[cols="2,4"]
|===
| Mise à jour | Description 


| Prise en charge du rééquilibrage automatique des unités de stockage | ONTAP rééquilibre automatiquement les unités de stockage dans vos zones de disponibilité du stockage pour une utilisation optimale des performances et de la capacité. 


| La désallocation d'espace NVMe est activée par défaut  a| 
La désallocation d'espace (également appelée « perforation » et « unmap ») est activée par défaut pour les espaces de noms NVMe. La désallocation d'espace permet à un hôte de désallouer les blocs inutilisés à partir des espaces de noms pour libérer de l'espace.

Cela améliore considérablement l'efficacité globale du stockage, en particulier avec les systèmes de fichiers dont le volume de données est élevé.

|===