@@ -1713,7 +1713,6 @@
   <block id="ee498a1797cb05156ed6a63b8ff17543" category="paragraph"><block ref="2e81c1e2e7e67baddc7dd1eab1535a95" category="inline-link-macro-rx"></block> pour répliquer les snapshots du groupe de cohérence enfant détaché vers un cluster distant en tant que groupe de cohérence unique.</block>
   <block id="ab8f09c8990747589e661d2b7b0d3f20" category="summary">Les systèmes ASA r2 (ASA A1K, A90, A70) proposent une solution matérielle et logicielle unifiée pour une expérience simplifiée aux clients qui utilisent uniquement un réseau SAN.</block>
   <block id="2168b2f72c5b19d6c97100664276ea67" category="searchtitle">En savoir plus sur les systèmes ASA A1K, A90 et A70</block>
-  <block id="a2d4e1cad7dfa6160fb66fdbda1b87c5" category="paragraph">Les systèmes ASA r2 prennent en charge tous les protocoles SAN (iSCSI, FC, NVMe/FC, NVMe/TCP). Les protocoles iSCSI, FC et NVMe/FC prennent en charge l'architecture actif-actif symétrique pour les chemins d'accès multiples, de sorte que tous les chemins entre les hôtes et le stockage soient actifs/optimisés. Les protocoles iSCSI et NVMe/TCP prennent en charge les chemins directs entre les hôtes et le stockage.</block>
   <block id="109a51a8a2c0a685a3c75a58d3c4230b" category="summary">Pour commencer avec un système ASA r2 (ASA A1K, A90, A70), installez le matériel, configurez le cluster, configurez l'accès aux données et provisionnez le stockage.</block>
   <block id="1e6107a968feb6567db48861306cc49f" category="searchtitle">Installer et configurer les systèmes de stockage ASA A1K, A90 et A70</block>
   <block id="e5c51f544e69319bec042113911e203e" category="paragraph"><block ref="1284f4e581f500fae0f4daa3e9543a0c" category="inline-link-macro-rx"></block> Votre système ASA r2 et déployez-le dans votre environnement ONTAP.</block>
@@ -1763,4 +1762,9 @@
   <block id="3214e36fd00eb6d4da6f5d9b64f41cb1" category="sidebar">Gérer les unités de stockage</block>
   <block id="611bc8bee4d5b03a55be78ab0ca75f66" category="sidebar">Déplacer les unités de stockage</block>
   <block id="ffb5ca95f1d59040ebadb90640b1970b" category="cell"><block ref="ffb5ca95f1d59040ebadb90640b1970b" category="inline-link-macro-rx"></block></block>
+  <block id="07f2a299db43ab53ccb5d7b05918e3fc" category="paragraph">Les systèmes ASA r2 prennent en charge tous les protocoles SAN (iSCSI, FC, NVMe/FC, NVMe/TCP). Les protocoles iSCSI, FC, NVMe/FC et NVMe/TCP prennent en charge une architecture actif-actif symétrique pour les chemins d'accès multiples, de sorte que tous les chemins entre les hôtes et le stockage soient actifs/optimisés. Les protocoles iSCSI et NVMe/TCP prennent en charge les chemins directs entre les hôtes et le stockage.</block>
+  <block id="30388d1a3ab1a01f6930553a577eb80b" category="section-title">Protocoles pris en charge</block>
+  <block id="de67fc8f6fb798124dcbf65615888af5" category="inline-link-macro">Prise en charge de NVMe pour les chemins d'accès multiples symétriques actif-actif</block>
+  <block id="ac187c37acbb455a3ec9ef006a79fdf8" category="cell"><block ref="ac187c37acbb455a3ec9ef006a79fdf8" category="inline-link-macro-rx"></block></block>
+  <block id="ac12d691d1b6c417de929f3b833cef99" category="cell">NVMe/FC et NVMe/TCP prennent désormais en charge l'architecture actif-actif symétrique pour les chemins d'accès multiples, de sorte que tous les chemins entre les hôtes et le stockage soient actifs/optimisés.</block>
 </blocks>
